ansible/roles/deploy_jenkins/templates/jenkins-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins-routed
  labels:
    app: jenkins-routed
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /jenkins-routed
        pathType: "Prefix"
        backend:
          service:
            name: jenkins-service
            port:
              number: 80
